src/components/BodyContainer/BodyContainer.sass
@use '../../styles/variables' as vars

.body
    background-color: vars.$background-color
    display: flex
    justify-content: center
    align-items: center
    min-height: 100vh
    min-width: 90vw
    overflow: hidden
    display: flex
    flex-direction: column

.container
    max-width: 1140px
    min-width: auto
    margin: 2%

